=================
Changes for Crate
=================

Unreleased
==========

 - Fix: clean up file descriptors in case of exceptions when retrieving blobs
   over the REST api

 - Updated crash to 0.14.2 which contains following changes:

   - Fixed an assertion error that could occur under python2.7

 - Fixed an issue that was causing like queries to fail if using a special regex 
   character

 - Upgraded Elasticsearch to 1.7.3

 - Fixed the issue which causes overloading of the first configured node in
   the cluster when multiple clients connections are established

 - Fixed a possible race condition that could lead to queries getting stuck
   (Only affected SELECT queries with a limit/offset > 500000) 

 - Fix: Crate won't start properly if a plugin loading error occurs
   (e.g. through a misconfigured plugin)

 - Updated crash to version 0.14.1 which contains the following changes:

   - Floating point values are no longer rounded to 6 places under python2.7 if
     output using the tabular or mixed output format.
     Now the behaviour for all output formats is the same and consistent with
     the python3 output format.

     Python2.6 will still display rounded values.

   - Fixed the issue casuing parsing error while using internal ``non-sql``
     crash commands with semicolon.

 - Updated crate-admin to 0.15.2 which includes following changes:

   - fixed a bug that displays partitions that are not related to the selected
     table in the table-list.

   - fixed a bug where cluster shows wrong state if the number of nodes gets
     smaller than the minimum master nodes.

   - fixed a bug that displays a zero value as NULL value

   - fixed URL to download in dropdown that notifies about old Crate version

   - fixed a visual bug that let an item in the node/table list partly disappear
     if scrolling gets enabled

 - Fixed an issue that was introduced in 0.52.0 which could cause a