@@ -25,15 +25,11 @@ import io.crate.Constants;
 import io.crate.analyze.*;
 import io.crate.analyze.relations.PlannedAnalyzedRelation;
 import io.crate.analyze.symbol.Symbol;
-import io.crate.exceptions.TableUnknownException;
 import io.crate.exceptions.ValidationException;
-import io.crate.metadata.FulltextAnalyzerResolver;
-import io.crate.metadata.NestedReferenceResolver;
+import io.crate.metadata.MetaDataModule;
 import io.crate.metadata.Schemas;
-import io.crate.metadata.TableIdent;
-import io.crate.metadata.doc.DocTableInfo;
+import io.crate.metadata.information.MetaDataInformationModule;
 import io.crate.metadata.table.SchemaInfo;
-import io.crate.metadata.table.TableInfo;
 import io.crate.operation.aggregation.impl.AggregationImplModule;
 import io.crate.operation.operator.OperatorModule;
 import io.crate.operation.predicate.PredicateModule;
@@ -44,31 +40,29 @@ import io.crate.planner.Planner;
 import io.crate.planner.node.dql.CollectAndMerge;
 import io.crate.planner.node.dql.CollectPhase;
 import io.crate.planner.node.dql.join.NestedLoop;
+import io.crate.planner.projection.FilterProjection;
 import io.crate.planner.projection.TopNProjection;
 import io.crate.sql.parser.SqlParser;
 import io.crate.test.integration.CrateUnitTest;
+import io.crate.testing.MockedClusterServiceModule;
 import org.elasticsearch.cluster.ClusterService;
-import org.elasticsearch.common.inject.Binder;
 import org.elasticsearch.common.inject.Injector;
-import org.elasticsearch.common.inject.Module;
 import org.elasticsearch.common.inject.ModulesBuilder;
-import org.elasticsearch.test.cluster.NoopClusterService;
+import org.elasticsearch.threadpool.ThreadPool;
 import org.hamcrest.Matchers;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
 
-import java.util.Iterator;
 import java.util.List;
 import java.util.UUID;
 
-import static io.crate.testing.TestingHelpers.isFunction;
-import static io.crate.testing.TestingHelpers.isReference;
-import static org.hamcrest.Matchers.instanceOf;
-import static org.hamcrest.Matchers.notNullValue;
+import static io.crate.testing.TestingHelpers.*;
+import static org.hamcrest.Matchers.*;
 import static org.hamcrest.core.Is.is;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 public class CrossJoinConsumerTest extends CrateUnitTest {
 
@@ -86,7 +80,9 @@ public class CrossJoinConsumerTest extends CrateUnitTest {
     @Before
     public void initPlanner() throws Exception {
         Injector injector = new ModulesBuilder()
+                .add(new MockedClusterServiceModule())
                 .add(new TestModule())
+                .add(new MetaDataInformationModule())
                 .add(new AggregationImplModule())
                 .add(new ScalarFunctionModule())
                 .add(new PredicateModule())
@@ -97,46 +93,20 @@ public class CrossJoinConsumerTest extends CrateUnitTest {
     }
 
 
-    private class TestModule implements Module {
+    private class TestModule extends MetaDataModule {
+
         @Override
-        public void configure(Binder binder) {
-            binder.bind(NestedReferenceResolver.class).toInstance(mock(NestedReferenceResolver.class));
-            binder.bind(FulltextAnalyzerResolver.class).toInstance(mock(FulltextAnalyzerResolver.class));
-            binder.bind(ClusterService.class).toInstance(new NoopClusterService());
-            binder.bind(Schemas.class).toInstance(new Schemas() {
-                @Override
-                public DocTableInfo getDropableTable(TableIdent tableIdent) {
-                    return null;
-                }
+        protected void configure() {
+            super.configure();
+            bind(ThreadPool.class).toInstance(newMockedThreadPool());
+        }
 
-                @Override
-                public DocTableInfo getWritableTable(TableIdent tableIdent) {
-                    return null;
-                }
-
-                @Override
-                public TableInfo getTableInfo(TableIdent ident) {
-                    if (ident.name().equals("users")) {
-                        return BaseAnalyzerTest.userTableInfo;
-                    }
-                    throw new TableUnknownException(ident);
-                }
-
-                @Override
-                public boolean tableExists(TableIdent tableIdent) {
-                    return false;
-                }
-
-                @Override
-                public boolean isOrphanedAlias(DocTableInfo table) {
-                    return false;
-                }
-
-                @Override
-                public Iterator<SchemaInfo> iterator() {
-                    return null;
-                }
-            });
+        @Override
+        protected void bindSchemas() {
+            super.bindSchemas();
+            SchemaInfo schemaInfo = mock(SchemaInfo.class);
+            when(schemaInfo.getTableInfo("users")).thenReturn(BaseAnalyzerTest.userTableInfo);
+            schemaBinder.addBinding(Schemas.DEFAULT_SCHEMA_NAME).toInstance(schemaInfo);
         }
     }
 
@@ -203,6 +173,33 @@ public class CrossJoinConsumerTest extends CrateUnitTest {
         assertThat(plan.right().resultNode().projections().size(), is(0));
         MergePhase rightMerge = plan.nestedLoopPhase().rightMergePhase();
         assertThat(rightMerge.projections().size(), is(0));*/
+    }
+
+
+    @Test
+    public void testNoLimitPushDownWithJoinCondition() throws Exception {
+        NestedLoop plan = plan("select * from information_schema.tables, information_schema .columns " +
+                               "where tables.schema_name = columns.schema_name " +
+                               "and tables.table_name = columns.table_name limit 10");
+        assertThat(((CollectAndMerge) plan.left()).collectPhase().projections().size(), is(0));
+        assertThat(((CollectAndMerge) plan.right()).collectPhase().projections().size(), is(0));
+    }
+
+    @Test
+    public void testNoNodePageSizeHintPushDownWithJoinCondition() throws Exception {
+        NestedLoop plan = plan("select * from information_schema.tables, information_schema .columns " +
+                               "where tables.schema_name = columns.schema_name " +
+                               "and tables.table_name = columns.table_name limit 10");
+        assertThat(((CollectAndMerge) plan.left()).collectPhase().nodePageSizeHint(), nullValue());
+        assertThat(((CollectAndMerge) plan.right()).collectPhase().nodePageSizeHint(), nullValue());
+    }
+
+    @Test
+    public void testNLPhaseHasFilterProjection() throws Exception {
+        NestedLoop plan = plan("select * from information_schema.tables, information_schema .columns " +
+                               "where tables.schema_name = columns.schema_name " +
+                               "and tables.table_name = columns.table_name limit 10");
+        assertThat(plan.nestedLoopPhase().projections().get(0), instanceOf(FilterProjection.class));
     }
 
     @SuppressWarnings("ConstantConditions")
